--- a/404.html
+++ b/404.html
@@ -3,16 +3,16 @@
 <meta http-equiv=x-clacks-overhead content="GNU Terry Pratchett">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href=https://www.georgeho.org/assets/images/favicon.ico>
+<link rel="shortcut icon" href=http://www.georgeho.org/georgeho/assets/images/favicon.ico>
 <title>404</title><meta name=title content="404 Page not found">
 <meta name=description content="I’m interested in natural language processing, Bayesian modelling, and coffee. Sometimes, but not always, in that order.">
 <meta name=keywords content="bayes,dataset,deep-learning,life-update,machine-learning,mathematics,natural-language-processing,open-source,probabilistic-programming,pymc,python,quant-finance,r,reinforcement-learning,stan,statistics,streaming,talks,">
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="I’m interested in natural language processing, Bayesian modelling, and coffee. Sometimes, but not always, in that order.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.georgeho.org/404.html"><meta property="og:image" content="https://www.georgeho.org/images/share.png"><meta property="og:site_name" content="⁂ George Ho">
+<meta property="og:url" content="http://www.georgeho.org/georgeho/404.html"><meta property="og:image" content="http://www.georgeho.org/georgeho/images/share.png"><meta property="og:site_name" content="⁂ George Ho">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://www.georgeho.org/images/share.png">
+<meta name=twitter:image content="http://www.georgeho.org/georgeho/images/share.png">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="I’m interested in natural language processing, Bayesian modelling, and coffee. Sometimes, but not always, in that order.">
 <meta itemprop=name content="404 Page not found">
@@ -26,11 +26,11 @@
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Serif+Pro:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel=stylesheet>
 <style>@font-face{font-family:NicholsonGothic;src:url(/assets/fonts/NicholsonGothic-Regular.otf)format("opentype");font-weight:400;font-style:normal}body{font-family:source serif pro,Georgia,serif;font-size:120%;background-color:#fffff8}code{font-family:source code pro,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#333;color:#ddd}}</style></head><body>
-<header><a href=/ class=title>
+<header><a href=/georgeho/ class=title>
 <h2>⁂ George Ho</h2></a>
-<nav><a href=/>Home</a>
-<a href=/work/>Work</a>
-<a href=/blog>Blog</a>
+<nav><a href=/georgeho/>Home</a>
+<a href=/georgeho/work/>Work</a>
+<a href=/georgeho/blog>Blog</a>
 </nav></header><main>
 <h1>404</h1><h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a>
 </footer></body></html>
