--- a/transformers-in-nlp/index.html
+++ b/transformers-in-nlp/index.html
@@ -37,8 +37,8 @@ As a disclaimer, this post is by no means exhaustive and is biased towards Trans
 </script>
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Serif+Pro:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel=stylesheet>
-<style>@font-face{font-family:NicholsonGothic;src:url(/assets/fonts/NicholsonGothic-Regular.otf)format("opentype");font-weight:400;font-style:normal}body{font-family:source serif pro,Georgia,serif;font-size:120%;background-color:#fffff8}code{font-family:source code pro,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#333;color:#ddd}}</style></head><body>
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel=stylesheet>
+<style>@font-face{font-family:NicholsonGothic;src:url(/assets/fonts/NicholsonGothic-Regular.otf)format("opentype");font-weight:400;font-style:normal}body{font-family:source serif pro,Georgia,serif;font-size:125%;background-color:#fffff8}code{font-family:source code pro,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body>
 <header><a href=/georgeho/ class=title>
 <h2>⁂ George Ho</h2></a>
 <nav><a href=/georgeho/>Home</a>
@@ -106,7 +106,7 @@ limited data.</p></li><li>
 worthwhile to dig into the details a bit. The architecture is illustrated below:
 note that its feed-forward nature and multi-head self attention are critical
 aspects of this architecture!</p><figure class=align-center>
-<img style=float:middle src=/asset/images/transformer-block.png alt="Graphical representation of BERT">
+<img style=float:middle src=/assets/images/transformer-block.png alt="Graphical representation of BERT">
 <figcaption>Graphical representation of BERT. Source: <a href=https://i.pinimg.com/originals/02/95/a3/0295a3be438ae68f604e53fc88c7edb4.png>Pinterest</a>.</figcaption></figure></li><li>
 <p>Further reading</p><ul>
 <li><a href=https://arxiv.org/pdf/1706.03762.pdf>Vaswani et al., Google Brain. December 2017.</a></li><li><a href=https://jalammar.github.io/illustrated-transformer/><em>The Illustrated Transformer</em> blog post</a></li><li><a href=http://nlp.seas.harvard.edu/2018/04/03/attention.html><em>The Annotated Transformer</em> blog post</a></li></ul></li></ul></li><li>
