--- a/work/index.html
+++ b/work/index.html
@@ -27,8 +27,8 @@
 </script>
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Serif+Pro:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel=stylesheet>
-<style>@font-face{font-family:NicholsonGothic;src:url(/assets/fonts/NicholsonGothic-Regular.otf)format("opentype");font-weight:400;font-style:normal}body{font-family:source serif pro,Georgia,serif;font-size:120%;background-color:#fffff8}code{font-family:source code pro,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#333;color:#ddd}}</style></head><body>
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel=stylesheet>
+<style>@font-face{font-family:NicholsonGothic;src:url(/assets/fonts/NicholsonGothic-Regular.otf)format("opentype");font-weight:400;font-style:normal}body{font-family:source serif pro,Georgia,serif;font-size:125%;background-color:#fffff8}code{font-family:source code pro,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body>
 <header><a href=/georgeho/ class=title>
 <h2>⁂ George Ho</h2></a>
 <nav><a href=/georgeho/>Home</a>
@@ -70,16 +70,16 @@ clues, indicators and charades, collected from various blogs and publicly
 available digital archives. It is the first and only such data set that is
 openly accessible and larger than any in extant literature, and is a
 significant work of crossword archivism.</li></ul></li></ul><h2 id=projects>Projects</h2><ul>
-<li>
-<p><a href=https://font-bakers.github.io/>Deep Learning for Algorithmic Type Design</a></p><ul>
+<li><a href=https://font-bakers.github.io/>Deep Learning for Algorithmic Type Design</a>
+<ul>
 <li>As a research project pursued in my last year at The Cooper Union, we
 researched a class- and attribute- conditional generative adversarial
 network capable of producing vector graphics, with potential applications
 in algorithmic type design. The generative model was to produce closed
 shapes, with counter spaces, defined by a variable number of quadratic
 Bézier curves. At the time, no generative model with vector graphic output
-has previously appeared in literature.</li></ul></li><li>
-<p><a href=https://www.georgeho.org/reddit-clusters/>Hate Speech on Reddit</a></p><ul>
+has previously appeared in literature.</li></ul></li><li><a href=https://www.georgeho.org/reddit-clusters/>Hate Speech on Reddit</a>
+<ul>
 <li>As part of a project on <a href=http://ee.cooper.edu/~keene/dssg.html>Data Science for Social
 Good</a>, I ran text clustering
 algorithms on well-known hateful and toxic subreddits, and collaborated
