--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </script>
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Serif+Pro:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel=stylesheet>
-<style>@font-face{font-family:NicholsonGothic;src:url(/assets/fonts/NicholsonGothic-Regular.otf)format("opentype");font-weight:400;font-style:normal}body{font-family:source serif pro,Georgia,serif;font-size:120%;background-color:#fffff8}code{font-family:source code pro,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#333;color:#ddd}}</style></head><body>
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel=stylesheet>
+<style>@font-face{font-family:NicholsonGothic;src:url(/assets/fonts/NicholsonGothic-Regular.otf)format("opentype");font-weight:400;font-style:normal}body{font-family:source serif pro,Georgia,serif;font-size:125%;background-color:#fffff8}code{font-family:source code pro,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body>
 <header><a href=/georgeho/ class=title>
 <h2>⁂ George Ho</h2></a>
 <nav><a href=/georgeho/>Home</a>
@@ -43,5 +43,5 @@ processing, Bayesian modelling, open source software, donuts and coffee.</p><p>I
 <a href=https://www.point72.com>Point72 Asset Management</a> and
 <a href=https://www.quantopian.com/>Quantopian</a>, and I studied engineering at <a href=http://cooper.edu/welcome>The
 Cooper Union</a>.</p><ul>
-<li><a href=mailto:hello%5B%C3%A6%5Dgeorgeho.org>Email</a></li><li><a href=https://twitter.com/_eigenfoo/>Twitter</a></li><li><a href=https://github.com/eigenfoo/>GitHub</a></li><li><a href=https://www.linkedin.com/in/eigenfoo/>LinkedIn</a></li><li><a href=/assets/documents/resume.pdf>Résumé</a></li></ul><p>qwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklzxcvbnm</p></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a>
+<li><a href=mailto:hello%5B%C3%A6%5Dgeorgeho.org>Email</a></li><li><a href=https://twitter.com/_eigenfoo/>Twitter</a></li><li><a href=https://github.com/eigenfoo/>GitHub</a></li><li><a href=https://www.linkedin.com/in/eigenfoo/>LinkedIn</a></li><li><a href=/assets/documents/resume.pdf>Résumé</a></li></ul></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a>
 </footer></body></html>
