--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href=https://www.georgeho.org/assets/images/favicon.ico>
 <title>404</title><meta name=title content="404 Page not found">
 <meta name=description content="I’m interested in natural language processing, Bayesian modelling, and coffee. Sometimes, but not always, in that order.">
-<meta name=keywords content="bayes,dataset,deep-learning,life-update,machine-learning,mathematics,natural-language-processing,open-source,probabilistic-programming,pymc,python,quant-finance,r,reinforcement-learning,stan,statistics,streaming,talks,">
+<meta name=keywords content="bayes,dataset,deep-learning,life-update,machine-learning,mathematics,natural-language-processing,open-source,probabilistic-programming,pymc,python,quant-finance,r,reinforcement-learning,stan,statistics,streaming,talks,typography,">
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="I’m interested in natural language processing, Bayesian modelling, and coffee. Sometimes, but not always, in that order.">
 <meta property="og:type" content="website">
