--- a/bayesian-inference-reading/index.html
+++ b/bayesian-inference-reading/index.html
@@ -3,8 +3,8 @@
 <meta http-equiv=x-clacks-overhead content="GNU Terry Pratchett">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href=https://www.georgeho.org/assets/images/favicon.ico>
-<title>Modern Computational Methods for Bayesian Inference — A Reading List | ⁂ George Ho</title><meta name=title content="Modern Computational Methods for Bayesian Inference — A Reading List">
+<link rel="shortcut icon" href=https://www.georgeho.org/favicon.ico>
+<title>Modern Computational Methods for Bayesian Inference — A Reading List | George Ho</title><meta name=title content="Modern Computational Methods for Bayesian Inference — A Reading List">
 <meta name=description content="Lately I&rsquo;ve been troubled by how little I actually knew about how Bayesian inference really worked. I could explain to you many other machine learning techniques, but with Bayesian modelling&mldr; well, there&rsquo;s a model (which is basically the likelihood, I think?), and then there&rsquo;s a prior, and then, um&mldr;
 What actually happens when you run a sampler? What makes inference &ldquo;variational&rdquo;? And what is this automatic differentiation doing in my variational inference?">
 <meta name=keywords content="bayes,">
@@ -31,12 +31,12 @@ What actually happens when you run a sampler? What makes inference &ldquo;variat
   MathJax.Hub.Config({ tex2jax: {inlineMath: [["$", "$"]]} })
 </script>
 <script async src=//static.getclicky.com/101349618.js></script>
-<noscript><p><img alt=Clicky width=1 height=1 src=//in.getclicky.com/101349618ns.gif></p></noscript><link rel=preconnect href=https://fonts.googleapis.com>
-<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel=stylesheet>
-<style>@font-face{font-family:NicholsonGothic;src:url(/assets/fonts/NicholsonGothic-Regular.otf)format("opentype");font-weight:400;font-style:normal}body{font-family:source serif pro,Georgia,serif;font-size:125%;background-color:#fffff8}code{font-family:source code pro,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body>
+<noscript><p><img alt=Clicky width=1 height=1 src=//in.getclicky.com/101349618ns.gif></p></noscript><link rel=stylesheet media=all href=/assets/fonts/nicholson-gothic.css type=text/css>
+<link rel=stylesheet media=all href=/assets/fonts/triplicate-a.css type=text/css>
+<script type=text/javascript>navigator.appVersion.indexOf("Win")!=-1?document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>'):navigator.appVersion.indexOf("Mac")!=-1?navigator.userAgent.match(/iPad/i)!=null?(document.write('<link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="/assets/fonts/equity-b.css" type="text/css"/>'),document.write('<link rel="stylesheet" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2)" type="text/css" href="/assets/fonts/equity-a.css"/>')):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-b.css"/>'):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>')</script>
+<style>body{font-family:Equity,Georgia,serif;font-size:1.45em;background-color:#fffff8}code{font-family:Triplicate,lucida console,monospace;font-size:85%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body>
 <header><a href=/ class=title>
-<h2>⁂ George Ho</h2></a>
+<h2>George Ho</h2></a>
 <nav><a href=/>Home</a>
 <a href=/work/>Work</a>
 <a href=/blog>Blog</a>
