--- a/data-collection-is-hard/index.html
+++ b/data-collection-is-hard/index.html
@@ -3,8 +3,8 @@
 <meta http-equiv=x-clacks-overhead content="GNU Terry Pratchett">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href=https://www.georgeho.org/assets/images/favicon.ico>
-<title>Data Collection is Hard. You Should Try It. | ⁂ George Ho</title><meta name=title content="Data Collection is Hard. You Should Try It.">
+<link rel="shortcut icon" href=https://www.georgeho.org/favicon.ico>
+<title>Data Collection is Hard. You Should Try It. | George Ho</title><meta name=title content="Data Collection is Hard. You Should Try It.">
 <meta name=description content="For people who make careers out of data, data scientists don&rsquo;t have nearly enough experience in data collection, and many data scientists don&rsquo;t even seem to feel the need to develop experience collecting data.
 Puzzlingly, this trend doesn&rsquo;t seem to be true of other forms of unglamorous data work like data cleaning (where people generally accept that data cleaning is not grunt work).
 With this blog post I want to give a defense of data collection — not as an activity that&rsquo;s inherently worthwhile pursuing (I assume data scientists don&rsquo;t need to be convinced of that!">
@@ -35,12 +35,12 @@ With this blog post I want to give a defense of data collection — not as an ac
   MathJax.Hub.Config({ tex2jax: {inlineMath: [["$", "$"]]} })
 </script>
 <script async src=//static.getclicky.com/101349618.js></script>
-<noscript><p><img alt=Clicky width=1 height=1 src=//in.getclicky.com/101349618ns.gif></p></noscript><link rel=preconnect href=https://fonts.googleapis.com>
-<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel=stylesheet>
-<style>@font-face{font-family:NicholsonGothic;src:url(/assets/fonts/NicholsonGothic-Regular.otf)format("opentype");font-weight:400;font-style:normal}body{font-family:source serif pro,Georgia,serif;font-size:125%;background-color:#fffff8}code{font-family:source code pro,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body>
+<noscript><p><img alt=Clicky width=1 height=1 src=//in.getclicky.com/101349618ns.gif></p></noscript><link rel=stylesheet media=all href=/assets/fonts/nicholson-gothic.css type=text/css>
+<link rel=stylesheet media=all href=/assets/fonts/triplicate-a.css type=text/css>
+<script type=text/javascript>navigator.appVersion.indexOf("Win")!=-1?document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>'):navigator.appVersion.indexOf("Mac")!=-1?navigator.userAgent.match(/iPad/i)!=null?(document.write('<link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="/assets/fonts/equity-b.css" type="text/css"/>'),document.write('<link rel="stylesheet" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2)" type="text/css" href="/assets/fonts/equity-a.css"/>')):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-b.css"/>'):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>')</script>
+<style>body{font-family:Equity,Georgia,serif;font-size:1.45em;background-color:#fffff8}code{font-family:Triplicate,lucida console,monospace;font-size:85%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body>
 <header><a href=/ class=title>
-<h2>⁂ George Ho</h2></a>
+<h2>George Ho</h2></a>
 <nav><a href=/>Home</a>
 <a href=/work/>Work</a>
 <a href=/blog>Blog</a>
