deploy: 31056d4e3ec8cedd9d9203ddc36acb82c7655f15

--- a/lda-sucks/index.html
+++ b/lda-sucks/index.html
@@ -40,7 +40,7 @@ Take this! It&rsquo;s our algorithm/code/paper! We used it to do the thing! And 
 <script type=text/javascript>navigator.appVersion.indexOf("Win")!=-1?document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>'):navigator.appVersion.indexOf("Mac")!=-1?navigator.userAgent.match(/iPad/i)!=null?(document.write('<link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="/assets/fonts/equity-b.css" type="text/css"/>'),document.write('<link rel="stylesheet" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2)" type="text/css" href="/assets/fonts/equity-a.css"/>')):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-b.css"/>'):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>')</script>
 <style>body{font-family:Equity,Georgia,serif;font-size:1.45em;background-color:#fffff8}code{font-family:Triplicate,lucida console,monospace;font-size:85%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body>
 <header><a href=/ class=title>
-<h2>George Ho</h2></a>
+<h2>⁂ George Ho</h2></a>
 <nav><a href=/>Home</a>
 <a href=/work/>Work</a>
 <a href=/blog>Blog</a>
