deploy: f5ee12083cca5c601e9a329f96cd9a5b3e5217c2

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <img src=/assets/images/profile-pic.jpg alt="A photo of George in front of the Great Gum Wall of Seattle.">
 </center>
 <p>I&rsquo;m a data scientist at <a href=https://flatiron.com/>Flatiron Health</a>, where I use
-machine learning on real-world data to accelerate cancer research. I like
-natural language processing, Bayesian modelling, open source software, donuts
-and coffee.</p><p>I&rsquo;m originally from Hong Kong, now based in New York. Previously, I worked for
+machine learning on real-world patient data to accelerate cancer research. I
+like natural language processing, Bayesian modelling, open source software,
+donuts and coffee.</p><p>I&rsquo;m originally from Hong Kong, now based in New York. Previously, I worked for
 <a href=https://www.point72.com>Point72 Asset Management</a> and
 <a href=https://www.quantopian.com/>Quantopian</a>, and I studied engineering at <a href=http://cooper.edu/welcome>The
 Cooper Union</a>.</p><ul>
