--- a/index.html
+++ b/index.html
@@ -44,5 +44,5 @@ donuts and coffee.</p><p>I&rsquo;m originally from Hong Kong, now based in New Y
 <a href=https://www.point72.com>Point72 Asset Management</a> and
 <a href=https://www.quantopian.com/>Quantopian</a>, and I studied engineering at <a href=http://cooper.edu/welcome>The
 Cooper Union</a>.</p><ul>
-<li><a href=mailto:hello%5B%C3%A6%5Dgeorgeho.org>Email</a></li><li><a href=https://twitter.com/_eigenfoo/>Twitter</a></li><li><a href=https://github.com/eigenfoo/>GitHub</a></li><li><a href=https://www.linkedin.com/in/eigenfoo/>LinkedIn</a></li><li><a href=/assets/documents/resume.pdf>Résumé</a></li></ul></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a>
+<li><a href=mailto:hello%5B%C3%A6%5Dgeorgeho.org>Email</a></li><li><a href=https://twitter.com/_eigenfoo/>Twitter</a></li><li><a href=https://github.com/eigenfoo/>GitHub</a></li><li><a href=https://www.linkedin.com/in/eigenfoo/>LinkedIn</a></li><li><a href=/assets/resume.pdf>Résumé</a></li></ul></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a>
 </footer></body></html>
