--- a/work/index.html
+++ b/work/index.html
@@ -1,86 +1,38 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta http-equiv=x-clacks-overhead content="GNU Terry Pratchett">
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<link rel="shortcut icon" href=https://www.georgeho.org/favicon.ico>
-<title>Work | George Ho</title><meta name=title content="Work">
-<meta name=description content="Software  PyMC3 and PyMC4  PyMC3 is a popular Python framework for Bayesian modeling and probabilistic machine learning, focusing on Markov chain Monte Carlo (MCMC) and variational inference (VI) algorithms. I&rsquo;m a member of the core development team, and contribute to the PyMC3 internals and documentation. I wrote a blog post on tips and tricks for Bayesian modelling using PyMC3.   Pyfolio and Alphalens  Pyfolio and Alphalens are Python libraries for risk analysis and performance attribution of financial portfolios, and alpha factor research for algorithmic trading.">
-<meta name=keywords content>
-<meta property="og:title" content="Work">
-<meta property="og:description" content="Software  PyMC3 and PyMC4  PyMC3 is a popular Python framework for Bayesian modeling and probabilistic machine learning, focusing on Markov chain Monte Carlo (MCMC) and variational inference (VI) algorithms. I&rsquo;m a member of the core development team, and contribute to the PyMC3 internals and documentation. I wrote a blog post on tips and tricks for Bayesian modelling using PyMC3.   Pyfolio and Alphalens  Pyfolio and Alphalens are Python libraries for risk analysis and performance attribution of financial portfolios, and alpha factor research for algorithmic trading.">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://www.georgeho.org/work/"><meta property="article:section" content>
-<meta property="og:site_name" content="⁂ George Ho">
-<meta name=twitter:card content="summary">
-<meta name=twitter:title content="Work">
-<meta name=twitter:description content="Software  PyMC3 and PyMC4  PyMC3 is a popular Python framework for Bayesian modeling and probabilistic machine learning, focusing on Markov chain Monte Carlo (MCMC) and variational inference (VI) algorithms. I&rsquo;m a member of the core development team, and contribute to the PyMC3 internals and documentation. I wrote a blog post on tips and tricks for Bayesian modelling using PyMC3.   Pyfolio and Alphalens  Pyfolio and Alphalens are Python libraries for risk analysis and performance attribution of financial portfolios, and alpha factor research for algorithmic trading.">
-<meta itemprop=name content="Work">
-<meta itemprop=description content="Software  PyMC3 and PyMC4  PyMC3 is a popular Python framework for Bayesian modeling and probabilistic machine learning, focusing on Markov chain Monte Carlo (MCMC) and variational inference (VI) algorithms. I&rsquo;m a member of the core development team, and contribute to the PyMC3 internals and documentation. I wrote a blog post on tips and tricks for Bayesian modelling using PyMC3.   Pyfolio and Alphalens  Pyfolio and Alphalens are Python libraries for risk analysis and performance attribution of financial portfolios, and alpha factor research for algorithmic trading.">
-<meta itemprop=wordCount content="375">
-<meta itemprop=keywords content>
-<meta name=referrer content="no-referrer-when-downgrade">
-<style>body{font-family:Verdana,sans-serif;margin:auto;padding:20px;max-width:720px;text-align:left;background-color:#fff;word-wrap:break-word;overflow-wrap:break-word;line-height:1.5;color:#444}h1,h2,h3,h4,h5,h6,strong,b{color:#222}a{color:#3273dc}.title{text-decoration:none;border:0}.title span{font-weight:400}nav a{margin-right:10px}textarea{width:100%;font-size:16px}input{font-size:16px}content{line-height:1.6}table{width:100%}img{max-width:100%}code{padding:2px 5px;background-color:#f2f2f2}pre code{color:#222;display:block;padding:20px;white-space:pre-wrap;font-size:14px}div.highlight pre{background-color:initial;color:initial}div.highlight code{background-color:unset;color:unset}blockquote{border-left:1px solid #999;color:#222;padding-left:20px;font-style:italic}footer{padding:25px;text-align:center}.helptext{color:#777;font-size:small}.errorlist{color:#eba613;font-size:small}ul.blog-posts{list-style-type:none;padding:unset}ul.blog-posts li{display:flex}ul.blog-posts li span{flex:0 0 130px}ul.blog-posts li a:visited{color:#8b6fcb}@media(prefers-color-scheme:dark){body{background-color:#333;color:#ddd}h1,h2,h3,h4,h5,h6,strong,b{color:#eee}a{color:#8cc2dd}code{background-color:#777}pre code{color:#ddd}blockquote{color:#ccc}textarea,input{background-color:#252525;color:#ddd}.helptext{color:#aaa}}</style><script type=text/javascript src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<!doctype html><html lang=en-us><head><meta http-equiv=x-clacks-overhead content="GNU Terry Pratchett"><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><link rel="shortcut icon" href=https://www.georgeho.org/favicon.ico><title>Work | George Ho</title><meta name=title content="Work"><meta name=description content="Software  PyMC3 and PyMC4  PyMC3 is a popular Python framework for Bayesian modeling and probabilistic machine learning, focusing on Markov chain Monte Carlo (MCMC) and variational inference (VI) algorithms. I&rsquo;m a member of the core development team, and contribute to the PyMC3 internals and documentation. I wrote a blog post on tips and tricks for Bayesian modelling using PyMC3.   Pyfolio and Alphalens  Pyfolio and Alphalens are Python libraries for risk analysis and performance attribution of financial portfolios, and alpha factor research for algorithmic trading."><meta name=keywords content><meta property="og:title" content="Work"><meta property="og:description" content="Software  PyMC3 and PyMC4  PyMC3 is a popular Python framework for Bayesian modeling and probabilistic machine learning, focusing on Markov chain Monte Carlo (MCMC) and variational inference (VI) algorithms. I&rsquo;m a member of the core development team, and contribute to the PyMC3 internals and documentation. I wrote a blog post on tips and tricks for Bayesian modelling using PyMC3.   Pyfolio and Alphalens  Pyfolio and Alphalens are Python libraries for risk analysis and performance attribution of financial portfolios, and alpha factor research for algorithmic trading."><meta property="og:type" content="article"><meta property="og:url" content="https://www.georgeho.org/work/"><meta property="og:image" content="https://www.georgeho.org/static/assets/asterism.png"><meta property="article:section" content><meta property="og:site_name" content="⁂ George Ho"><meta name=twitter:card content="summary_large_image"><meta name=twitter:image content="https://www.georgeho.org/static/assets/asterism.png"><meta name=twitter:title content="Work"><meta name=twitter:description content="Software  PyMC3 and PyMC4  PyMC3 is a popular Python framework for Bayesian modeling and probabilistic machine learning, focusing on Markov chain Monte Carlo (MCMC) and variational inference (VI) algorithms. I&rsquo;m a member of the core development team, and contribute to the PyMC3 internals and documentation. I wrote a blog post on tips and tricks for Bayesian modelling using PyMC3.   Pyfolio and Alphalens  Pyfolio and Alphalens are Python libraries for risk analysis and performance attribution of financial portfolios, and alpha factor research for algorithmic trading."><meta itemprop=name content="Work"><meta itemprop=description content="Software  PyMC3 and PyMC4  PyMC3 is a popular Python framework for Bayesian modeling and probabilistic machine learning, focusing on Markov chain Monte Carlo (MCMC) and variational inference (VI) algorithms. I&rsquo;m a member of the core development team, and contribute to the PyMC3 internals and documentation. I wrote a blog post on tips and tricks for Bayesian modelling using PyMC3.   Pyfolio and Alphalens  Pyfolio and Alphalens are Python libraries for risk analysis and performance attribution of financial portfolios, and alpha factor research for algorithmic trading."><meta itemprop=wordCount content="375"><meta itemprop=image content="https://www.georgeho.org/static/assets/asterism.png"><meta itemprop=keywords content><meta name=referrer content="no-referrer-when-downgrade"><style>body{font-family:Verdana,sans-serif;margin:auto;padding:20px;max-width:720px;text-align:left;background-color:#fff;word-wrap:break-word;overflow-wrap:break-word;line-height:1.5;color:#444}h1,h2,h3,h4,h5,h6,strong,b{color:#222}a{color:#3273dc}.title{text-decoration:none;border:0}.title span{font-weight:400}nav a{margin-right:10px}textarea{width:100%;font-size:16px}input{font-size:16px}content{line-height:1.6}table{width:100%}img{max-width:100%}code{padding:2px 5px;background-color:#f2f2f2}pre code{color:#222;display:block;padding:20px;white-space:pre-wrap;font-size:14px}div.highlight pre{background-color:initial;color:initial}div.highlight code{background-color:unset;color:unset}blockquote{border-left:1px solid #999;color:#222;padding-left:20px;font-style:italic}footer{padding:25px;text-align:center}.helptext{color:#777;font-size:small}.errorlist{color:#eba613;font-size:small}ul.blog-posts{list-style-type:none;padding:unset}ul.blog-posts li{display:flex}ul.blog-posts li span{flex:0 0 130px}ul.blog-posts li a:visited{color:#8b6fcb}@media(prefers-color-scheme:dark){body{background-color:#333;color:#ddd}h1,h2,h3,h4,h5,h6,strong,b{color:#eee}a{color:#8cc2dd}code{background-color:#777}pre code{color:#ddd}blockquote{color:#ccc}textarea,input{background-color:#252525;color:#ddd}.helptext{color:#aaa}}</style><script type=text/javascript src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script type=text/x-mathjax-config>
   MathJax.Hub.Config({ tex2jax: {inlineMath: [["$", "$"]]} })
-</script>
-<script async src=//static.getclicky.com/101349618.js></script>
-<noscript><p><img alt=Clicky width=1 height=1 src=//in.getclicky.com/101349618ns.gif></p></noscript><link rel=stylesheet media=all href=/assets/fonts/nicholson-gothic.css type=text/css>
-<link rel=stylesheet media=all href=/assets/fonts/triplicate-a.css type=text/css>
-<script type=text/javascript>navigator.appVersion.indexOf("Win")!=-1?document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>'):navigator.appVersion.indexOf("Mac")!=-1?navigator.userAgent.match(/iPad/i)!=null?(document.write('<link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="/assets/fonts/equity-b.css" type="text/css"/>'),document.write('<link rel="stylesheet" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2)" type="text/css" href="/assets/fonts/equity-a.css"/>')):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-b.css"/>'):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>')</script>
-<style>body{font-family:Equity,Georgia,serif;font-size:1.25em;background-color:#fffff8}code{font-family:Triplicate,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body>
-<header><a href=/ class=title>
-<h2>⁂ George Ho</h2></a>
-<nav><a href=/>Home</a>
+</script><script async src=//static.getclicky.com/101349618.js></script><noscript><p><img alt=Clicky width=1 height=1 src=//in.getclicky.com/101349618ns.gif></p></noscript><link rel=stylesheet media=all href=/assets/fonts/nicholson-gothic.css type=text/css><link rel=stylesheet media=all href=/assets/fonts/triplicate-a.css type=text/css><script type=text/javascript>navigator.appVersion.indexOf("Win")!=-1?document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>'):navigator.appVersion.indexOf("Mac")!=-1?navigator.userAgent.match(/iPad/i)!=null?(document.write('<link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="/assets/fonts/equity-b.css" type="text/css"/>'),document.write('<link rel="stylesheet" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2)" type="text/css" href="/assets/fonts/equity-a.css"/>')):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-b.css"/>'):document.write('<link rel="stylesheet" type="text/css" media="all" href="/assets/fonts/equity-a.css"/>')</script><style>body{font-family:Equity,Georgia,serif;font-size:1.25em;background-color:#fffff8}code{font-family:Triplicate,lucida console,monospace;font-size:90%}h1,h2,h3,h4,h5,h6{font-family:NicholsonGothic,Verdana,sans-serif}@media(prefers-color-scheme:dark){body{background-color:#111}}</style></head><body><header><a href=/ class=title><h2>⁂ George Ho</h2></a><nav><a href=/>Home</a>
 <a href=/work/>Work</a>
-<a href=/blog>Blog</a>
-</nav></header><main>
-<content>
-<h2 id=software>Software</h2><ul>
-<li><a href=https://github.com/pymc-devs/pymc3>PyMC3</a> and
-<a href=https://github.com/pymc-devs/pymc4>PyMC4</a>
-<ul>
-<li>PyMC3 is a popular Python framework for Bayesian modeling and probabilistic
+<a href=/blog>Blog</a></nav></header><main><content><h2 id=software>Software</h2><ul><li><a href=https://github.com/pymc-devs/pymc3>PyMC3</a> and
+<a href=https://github.com/pymc-devs/pymc4>PyMC4</a><ul><li>PyMC3 is a popular Python framework for Bayesian modeling and probabilistic
 machine learning, focusing on Markov chain Monte Carlo (MCMC) and
 variational inference (VI) algorithms.</li><li>I&rsquo;m a member of the core development team, and contribute to the PyMC3
 internals and documentation. I wrote <a href=https://www.georgeho.org/bayesian-modelling-cookbook/>a blog post on tips and tricks for
 Bayesian modelling using
 PyMC3</a>.</li></ul></li><li><a href=https://github.com/quantopian/pyfolio>Pyfolio</a> and
-<a href=https://github.com/quantopian/alphalens>Alphalens</a>
-<ul>
-<li>Pyfolio and Alphalens are Python libraries for risk analysis and
+<a href=https://github.com/quantopian/alphalens>Alphalens</a><ul><li>Pyfolio and Alphalens are Python libraries for risk analysis and
 performance attribution of financial portfolios, and alpha factor research
 for algorithmic trading. Both libraries are fully integrated into the
 <a href=http://quantopian.com/>Quantopian platform</a>.</li><li>I developed the risk and performance attribution capabilities of Pyfolio
 (read more on <a href=https://www.georgeho.org/pyfolio/>my blog post here</a>), and
 help maintain the library. I help develop new features, triage bug reports
-and troubleshoot issues for Alphalens.</li></ul></li><li><a href=https://github.com/font-bakers/knead>Knead</a> and <a href=https://github.com/font-bakers/glaze>Glaze</a>
-<ul>
-<li>Knead and Glaze are command line tools and Python libraries for
+and troubleshoot issues for Alphalens.</li></ul></li><li><a href=https://github.com/font-bakers/knead>Knead</a> and <a href=https://github.com/font-bakers/glaze>Glaze</a><ul><li>Knead and Glaze are command line tools and Python libraries for
 preprocessing, manipulating, rendering and visualizing font files and
 algorithmically-generated typefaces.
 Both libraries were written as internal tools for <a href=https://font-bakers.github.io/>The Font
 Bakers</a>, to support their research and
-development workflow. I developed and maintain both projects.</li></ul></li></ul><h2 id=datasets>Datasets</h2><ul>
-<li><a href=https://cryptics.georgeho.org/><code>cryptics.georgeho.org</code></a>
-<ul>
-<li><code>cryptics.georgeho.org</code> is a dataset of <a href=https://www.newyorker.com/puzzles-and-games-dept/cryptic-crossword/reintroducing-the-new-yorkers-cryptic-crossword>cryptic
+development workflow. I developed and maintain both projects.</li></ul></li></ul><h2 id=datasets>Datasets</h2><ul><li><a href=https://cryptics.georgeho.org/><code>cryptics.georgeho.org</code></a><ul><li><code>cryptics.georgeho.org</code> is a dataset of <a href=https://www.newyorker.com/puzzles-and-games-dept/cryptic-crossword/reintroducing-the-new-yorkers-cryptic-crossword>cryptic
 crossword</a>
 clues, indicators and charades, collected from various blogs and publicly
 available digital archives. It is the first and only such data set that is
 openly accessible and larger than any in extant literature, and is a
-significant work of crossword archivism.</li></ul></li></ul><h2 id=projects>Projects</h2><ul>
-<li><a href=https://font-bakers.github.io/>Deep Learning for Algorithmic Type Design</a>
-<ul>
-<li>As a research project pursued in my last year at The Cooper Union, we
+significant work of crossword archivism.</li></ul></li></ul><h2 id=projects>Projects</h2><ul><li><a href=https://font-bakers.github.io/>Deep Learning for Algorithmic Type Design</a><ul><li>As a research project pursued in my last year at The Cooper Union, we
 researched a class- and attribute- conditional generative adversarial
 network capable of producing vector graphics, with potential applications
 in algorithmic type design. The generative model was to produce closed
 shapes, with counter spaces, defined by a variable number of quadratic
 Bézier curves. At the time, no generative model with vector graphic output
-has previously appeared in literature.</li></ul></li><li><a href=https://www.georgeho.org/reddit-clusters/>Hate Speech on Reddit</a>
-<ul>
-<li>As part of a project on <a href=http://ee.cooper.edu/~keene/dssg.html>Data Science for Social
+has previously appeared in literature.</li></ul></li><li><a href=https://www.georgeho.org/reddit-clusters/>Hate Speech on Reddit</a><ul><li>As part of a project on <a href=http://ee.cooper.edu/~keene/dssg.html>Data Science for Social
 Good</a>, I ran text clustering
 algorithms on well-known hateful and toxic subreddits, and collaborated
 with a cross-disciplinary team of artists, architects and engineers to
@@ -89,7 +41,4 @@ Show</a>.
 I also wrote <a href=https://www.georgeho.org/reddit-clusters/>a blog post on my
 results</a>, and <a href=https://www.georgeho.org/reddit-slides/>gave a talk on
 the data science that went into the
-project</a>.</li></ul></li></ul></content>
-<p>
-</p></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a>
-</footer></body></html>
+project</a>.</li></ul></li></ul></content><p></p></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
