deploy: 7995a6e78ef8e1eb487bb9cf9fcaa577e1247a47

--- a/tensor-computation-libraries/index.html
+++ b/tensor-computation-libraries/index.html
@@ -57,7 +57,7 @@ graph, you&rsquo;ll have to handle control flow like if-else statements or for-l
 to common gotchas with <a href=https://jax.readthedocs.io/en/latest/notebooks/Common_Gotchas_in_JAX.html#%F0%9F%94%AA-Control-Flow>using Python for-loops in
 JAX</a>
 or needing to use <a href=https://discuss.pytorch.org/t/can-you-have-for-loops-in-the-forward-prop/68295><code>torch.nn.ModuleList</code> in for-loops with
-PyTorch</a>.</li><li>Some tensor computation libraries (e.g. <a href=https://github.com/Theano/Theano>Theano</a> and it&rsquo;s
+PyTorch</a>.</li><li>Some tensor computation libraries (e.g. <a href=https://github.com/Theano/Theano>Theano</a> and its
 fork, <a href=https://theano-pymc.readthedocs.io/en/latest/index.html>Theano-PyMC</a>) aim to <a href=https://theano-pymc.readthedocs.io/en/latest/extending/optimization.html>optimize
 the computational graph
 itself</a>, for which an
