--- a/static-site-typography/index.html
+++ b/static-site-typography/index.html
@@ -119,7 +119,7 @@ primary is simply its best guess.</p></blockquote><div class=highlight><pre tabi
 </span></span><span style=display:flex><span>}
 </span></span></code></pre></div><h3 id=support-sidenotes>Support sidenotes</h3><p><em>Sidenotes</em> are when footnotes are placed in the margins beside the text they
 reference, instead of at the end of the page. They allow readers to instantly
-read them instead of having to constantly click or scroll to and fro.
+read annotations instead of having to constantly click or scroll to and fro.
 <strong>Sidenotes greatly improve footnotes for the web, but are fairly difficult to
 implement despite recent efforts.</strong></p><p>Gwern has compiled <a href=https://www.gwern.net/Sidenotes>an exhaustive bibliography of sidenote
 implementations</a>, which I recommend skimming
