deploy: 607e7da2c5c3fcd89db94ac61d5ef09eed4b6664

--- a/static-site-typography/index.html
+++ b/static-site-typography/index.html
@@ -124,7 +124,7 @@ read annotations instead of having to constantly click or scroll to and fro.
 <strong>Sidenotes greatly improve footnotes for the web, but are fairly difficult to
 implement despite recent efforts.</strong></p><p>Gwern has compiled <a href=https://www.gwern.net/Sidenotes>an exhaustive bibliography of sidenote
 implementations</a>, which I recommend skimming
-over being turning to <a href=https://edwardtufte.github.io/tufte-css/>Tufte CSS</a> for
-a simpler implementation.</p><section class=footnotes role=doc-endnotes><hr><ol><li id=fn:1 role=doc-endnote><p>Yeah I know, I&rsquo;m interchanging <em>font</em> and <em>typeface</em>, but at least I have
+over before turning to <a href=https://edwardtufte.github.io/tufte-css/>Tufte CSS</a>
+for a simpler implementation.</p><section class=footnotes role=doc-endnotes><hr><ol><li id=fn:1 role=doc-endnote><p>Yeah I know, I&rsquo;m interchanging <em>font</em> and <em>typeface</em>, but at least I have
 a life.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:2 role=doc-endnote><p>Graphic designers may call this <em>active whitespace:</em> whitespace
 deliberately added for the sake of emphasis or structure.&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></section></content><p><a href=https://www.georgeho.org/blog/typography/>#typography</a></p></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
