deploy: 56f7054cd7b4052e62c9f4f3b47ad9c5ba95f295

--- a/bayesian-modelling-cookbook/index.html
+++ b/bayesian-modelling-cookbook/index.html
@@ -292,6 +292,5 @@ we were to remeasure, given that you&rsquo;ve already observed the data you did.
 As such, it&rsquo;s informed by your prior as well as your data, and it&rsquo;s not its
 job to adequately fit your data!</li></ul></li></ol></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a>
 <a href=https://www.georgeho.org/blog/pymc/>#pymc</a>
-<a href=https://www.georgeho.org/blog/open-source/>#open-source</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Stay updated:</label>
-<input type=email name=email id=bd-email placeholder=your@email.com>
+<a href=https://www.georgeho.org/blog/open-source/>#open-source</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
