--- a/manipulating-python-asts/index.html
+++ b/manipulating-python-asts/index.html
@@ -158,6 +158,5 @@ out <a href=https://lucumr.pocoo.org/2011/2/1/exec-in-python/>Armin Ronacher&rsq
 post</a> and <a href=https://stackoverflow.com/questions/2220699/whats-the-difference-between-eval-exec-and-compile>this
 StackOverflow
 answer</a>.&#160;<a href=#fnref:4 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></section></content><p><a href=https://www.georgeho.org/blog/pymc/>#pymc</a>
-<a href=https://www.georgeho.org/blog/python/>#python</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Stay updated:</label>
-<input type=email name=email id=bd-email placeholder=your@email.com>
+<a href=https://www.georgeho.org/blog/python/>#python</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
