--- a/reddit-clusters/index.html
+++ b/reddit-clusters/index.html
@@ -198,6 +198,5 @@ everything I’ve written to make these clusters, check out <a href=https://gith
 repository</a>.</p><hr><p><strong>Update (2018-11-08):</strong> If you&rsquo;re interested in the technical, data science side
 of the project, check out the slide deck and speaker notes from <a href=https://www.georgeho.org/reddit-slides/>my recent
 talk</a> on exactly that!</p></content><p><a href=https://www.georgeho.org/blog/machine-learning/>#machine-learning</a>
-<a href=https://www.georgeho.org/blog/natural-language-processing/>#natural-language-processing</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Stay updated:</label>
-<input type=email name=email id=bd-email placeholder=your@email.com>
+<a href=https://www.georgeho.org/blog/natural-language-processing/>#natural-language-processing</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
