--- a/work/index.html
+++ b/work/index.html
@@ -41,5 +41,4 @@ Show</a>.
 I also wrote <a href=https://www.georgeho.org/reddit-clusters/>a blog post on my
 results</a>, and <a href=https://www.georgeho.org/reddit-slides/>gave a talk on
 the data science that went into the
-project</a>.</li></ul></li></ul></content><p></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+project</a>.</li></ul></li></ul></content><p></p></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
