deploy: c74bea4ae7c0205f6432f110e99a80378b8ad739

--- a/manipulating-python-asts/index.html
+++ b/manipulating-python-asts/index.html
@@ -150,14 +150,14 @@ READMEs</a>.</li><li>For those looking to programmatically inspect/modify Python
 here, you might find <a href=https://twitter.com/remilouf/status/1213079103156424704>this Twitter
 thread</a> helpful.</li><li>And for those wondering how PyMC4&rsquo;s model specification API ended up, some very smart
 people gave their feedback on this work <a href=https://twitter.com/avibryant/status/1150827954319982592>on
-Twitter</a>.</li></ul><section class=footnotes role=doc-endnotes><hr><ol><li id=fn:1 role=doc-endnote><p>Or should I say, complicating? At any rate, changing!&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:2 role=doc-endnote><p>I was <a href=https://twitter.com/avibryant/status/1150827954319982592>subsequently
+Twitter</a>.</li></ul><div class=footnotes role=doc-endnotes><hr><ol><li id=fn:1><p>Or should I say, complicating? At any rate, changing!&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:2><p>I was <a href=https://twitter.com/avibryant/status/1150827954319982592>subsequently
 convinced</a> that this
-isn&rsquo;t a leaky abstraction after all.&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:3 role=doc-endnote><p>I omitted the implementation of <code>parse_snippet</code> for brevity. If you want
+isn&rsquo;t a leaky abstraction after all.&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:3><p>I omitted the implementation of <code>parse_snippet</code> for brevity. If you want
 to see it, check out the &ldquo;AST Helper Functions&rdquo; section of <a href=https://github.com/eigenfoo/random/blob/master/python/ast-hiding-yield/00-prototype/hiding-yield.ipynb>this
-notebook</a>.&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:4 role=doc-endnote><p>For way more information on <code>exec</code>, <code>eval</code>, <code>locals</code> and <code>globals</code>, check
+notebook</a>.&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:4><p>For way more information on <code>exec</code>, <code>eval</code>, <code>locals</code> and <code>globals</code>, check
 out <a href=https://lucumr.pocoo.org/2011/2/1/exec-in-python/>Armin Ronacher&rsquo;s blog
 post</a> and <a href=https://stackoverflow.com/questions/2220699/whats-the-difference-between-eval-exec-and-compile>this
 StackOverflow
-answer</a>.&#160;<a href=#fnref:4 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></section></content><p><a href=https://www.georgeho.org/blog/pymc/>#pymc</a>
+answer</a>.&#160;<a href=#fnref:4 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/pymc/>#pymc</a>
 <a href=https://www.georgeho.org/blog/python/>#python</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
