--- a/bayesian-bandits-2/index.html
+++ b/bayesian-bandits-2/index.html
@@ -101,12 +101,12 @@ They&rsquo;ve provided blazingly fast implementations of recent algorithms and w
 good documentation for them.</p><p>For the theory and math behind bandit algorithms, <a href=https://banditalgs.com/>Tor Lattimore and Csaba
 Szepesvári&rsquo;s book</a> covers a breathtaking amount of
 ground.</p><blockquote><p>This is the second of a two-part series about Bayesian bandit algorithms.
-Check out the first post <a href=https://www.georgeho.org/bayesian-bandits/>here</a>.</p></blockquote><section class=footnotes role=doc-endnotes><hr><ol><li id=fn:1 role=doc-endnote><p>Did you know you can make <a href=http://adereth.github.io/blog/2013/11/29/colorful-equations/>colored equations with
+Check out the first post <a href=https://www.georgeho.org/bayesian-bandits/>here</a>.</p></blockquote><div class=footnotes role=doc-endnotes><hr><ol><li id=fn:1><p>Did you know you can make <a href=http://adereth.github.io/blog/2013/11/29/colorful-equations/>colored equations with
 MathJax</a>?
-Technology frightens me sometimes.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:2 role=doc-endnote><p>This explanation is largely drawn from <a href="http://hunch.net/?p=298">from John Langford&rsquo;s
-<code>hunch.net</code></a>.&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:3 role=doc-endnote><p>If you don&rsquo;t want to do Bishop&rsquo;s exercises, there&rsquo;s a partially complete
+Technology frightens me sometimes.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:2><p>This explanation is largely drawn from <a href="http://hunch.net/?p=298">from John Langford&rsquo;s
+<code>hunch.net</code></a>.&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:3><p>If you don&rsquo;t want to do Bishop&rsquo;s exercises, there&rsquo;s a partially complete
 solutions manual <a href=https://github.com/GoldenCheese/PRML-Solution-Manual/>on
-GitHub</a> 😉&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></section></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a>
+GitHub</a> 😉&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a>
 <a href=https://www.georgeho.org/blog/reinforcement-learning/>#reinforcement-learning</a>
 <a href=https://www.georgeho.org/blog/machine-learning/>#machine-learning</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
