--- a/data-collection-is-hard/index.html
+++ b/data-collection-is-hard/index.html
@@ -69,8 +69,8 @@ warehouse&rdquo;). I also learnt that the historical backfilling ETL job require
 lot of time and compute, but subsequent incremental ETL jobs could just run off
 of my laptop. These best practice patterns around data collection and
 management are all applicable far beyond my simple side project, and were
-valuable lessons to learn first-hand.</p><section class=footnotes role=doc-endnotes><hr><ol><li id=fn:1 role=doc-endnote><p>Puzzlingly, this trend doesn&rsquo;t seem to be true of other forms of
+valuable lessons to learn first-hand.</p><div class=footnotes role=doc-endnotes><hr><ol><li id=fn:1><p>Puzzlingly, this trend doesn&rsquo;t seem to be true of other forms of
 unglamorous data work like data cleaning, where people generally accept that
 <a href=https://counting.substack.com/p/data-cleaning-is-analysis-not-grunt>data cleaning is not grunt
-work</a>.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></section></content><p><a href=https://www.georgeho.org/blog/dataset/>#dataset</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
+work</a>.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/dataset/>#dataset</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
