--- a/mass-matrix-benchmarks/index.html
+++ b/mass-matrix-benchmarks/index.html
@@ -91,12 +91,12 @@ sizes</a>
 during warmup.</li><li>These benchmarks are done only for very basic toy models: I should test more
 extensively on more models that people in The Real World™ use.</li><li>If you are interested in taking these benchmarks further (or perhaps just want
 to fact-check me on my results), the code is <a href=https://github.com/eigenfoo/mass-matrix-benchmarks>sitting in this GitHub
-repository</a><sup id=fnref:3><a href=#fn:3 class=footnote-ref role=doc-noteref>3</a></sup>.</li></ul><section class=footnotes role=doc-endnotes><hr><ol><li id=fn:1 role=doc-endnote><p>It&rsquo;s good to point out that mass matrix adaptation is to make sampling
+repository</a><sup id=fnref:3><a href=#fn:3 class=footnote-ref role=doc-noteref>3</a></sup>.</li></ul><div class=footnotes role=doc-endnotes><hr><ol><li id=fn:1><p>It&rsquo;s good to point out that mass matrix adaptation is to make sampling
 more efficient, not more valid. Theoretically, any mass matrix would work,
 but a good one (i.e. a good estimate of the covariance matrix of the model
-parameters) could sample orders of magnitudes more efficiently.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:2 role=doc-endnote><p>…uh, <em><em>sweats and looks around nervously for differential geometers</em></em>
-more formally called the <em>metric</em>…&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:3 role=doc-endnote><p>There are some violin plots lying around in the notebook, a relic from a
+parameters) could sample orders of magnitudes more efficiently.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:2><p>…uh, <em><em>sweats and looks around nervously for differential geometers</em></em>
+more formally called the <em>metric</em>…&#160;<a href=#fnref:2 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li><li id=fn:3><p>There are some violin plots lying around in the notebook, a relic from a
 time when I thought that I would have the patience to run each model and
-adaptation method multiple times.&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></section></content><p><a href=https://www.georgeho.org/blog/open-source/>#open-source</a>
+adaptation method multiple times.&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/open-source/>#open-source</a>
 <a href=https://www.georgeho.org/blog/pymc/>#pymc</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
 <input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
