deploy: a4b03bb1c4899de4057e826a3ac78a92305966a6

--- a/lupi/index.html
+++ b/lupi/index.html
@@ -136,4 +136,4 @@ reasons to be skeptical. It&rsquo;s very much a nascent perspective of machine
 learning, so I&rsquo;m interested in keeping an eye on it going forward. I&rsquo;m hoping
 to write more posts on LUPI in the future!</p></content><p><a href=https://www.georgeho.org/blog/mathematics/>#mathematics</a>
 <a href=https://www.georgeho.org/blog/machine-learning/>#machine-learning</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
