--- a/smalltalk/index.html
+++ b/smalltalk/index.html
@@ -85,4 +85,4 @@ passing them off to inference algorithms: by refining and specifying a
 contract for <code>tfp.JointDistribution</code>s, the TFP team was able to maintain the
 independence of the model specification programs and the inference
 algorithms.</p></li></ol></content><p><a href=https://www.georgeho.org/blog/typography/>#typography</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
