--- a/stan-vim/index.html
+++ b/stan-vim/index.html
@@ -28,4 +28,4 @@ syntax highlighting and projects links are below.</p><ul><li><a href=https://git
 language</a>.
 This is probably the last Vim plugin I write.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/open-source/>#open-source</a>
 <a href=https://www.georgeho.org/blog/stan/>#stan</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
