--- a/stat-tests-are-linear-model/index.html
+++ b/stat-tests-are-linear-model/index.html
@@ -13,4 +13,4 @@ blog</a>,
 <a href=https://www.georgeho.org/blog/python/>#python</a>
 <a href=https://www.georgeho.org/blog/r/>#r</a>
 <a href=https://www.georgeho.org/blog/statistics/>#statistics</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
