--- a/bayesian-modelling-cookbook/index.html
+++ b/bayesian-modelling-cookbook/index.html
@@ -294,4 +294,4 @@ As such, it&rsquo;s informed by your prior as well as your data, and it&rsquo;s 
 job to adequately fit your data!</li></ul></li></ol></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a>
 <a href=https://www.georgeho.org/blog/pymc/>#pymc</a>
 <a href=https://www.georgeho.org/blog/open-source/>#open-source</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
