--- a/data-collection-is-hard/index.html
+++ b/data-collection-is-hard/index.html
@@ -73,4 +73,4 @@ valuable lessons to learn first-hand.</p><div class=footnotes role=doc-endnotes>
 unglamorous data work like data cleaning, where people generally accept that
 <a href=https://counting.substack.com/p/data-cleaning-is-analysis-not-grunt>data cleaning is not grunt
 work</a>.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/dataset/>#dataset</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
