--- a/fonts-for-coding/index.html
+++ b/fonts-for-coding/index.html
@@ -35,4 +35,4 @@ Library</a>)</li><li>SimSun
 post</a>. Maybe if you have a Sun
 computer? <code>¯\_(ツ)_/¯</code></li></ul></li><li>Triplicate (<a href=https://mbtype.com/fonts/triplicate/>MB Type</a>)</li><li>Xanh Mono (<a href=https://fonts.google.com/specimen/Xanh+Mono>Google Fonts</a>,
 <a href=https://github.com/yellow-type-foundry/xanhmono>GitHub</a>)</li></ul></content><p><a href=https://www.georgeho.org/blog/typography/>#typography</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
