--- a/lda/index.html
+++ b/lda/index.html
@@ -177,4 +177,4 @@ combination of other features or measurements. However, ANOVA uses
 <strong>categorical</strong> independent variables and a <strong>continuous</strong> dependent variable,
 whereas discriminant analysis has <strong>continuous</strong> independent variables and a
 <strong>categorical</strong> dependent variable (i.e. the class label).</p></blockquote></content><p><a href=https://www.georgeho.org/blog/mathematics/>#mathematics</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
