--- a/littlemcmc/index.html
+++ b/littlemcmc/index.html
@@ -28,4 +28,4 @@ the PyMC3 community.</p><p>So without further ado: please check out <code>little
 <a href=https://www.georgeho.org/blog/probabilistic-programming/>#probabilistic-programming</a>
 <a href=https://www.georgeho.org/blog/pymc/>#pymc</a>
 <a href=https://www.georgeho.org/blog/python/>#python</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
