--- a/making-and-maintenance-of-oss/index.html
+++ b/making-and-maintenance-of-oss/index.html
@@ -43,4 +43,4 @@ woman</a>).</p><p>I think Eghbal realizes that these problems aren&rsquo;t speci
 source, but rather are endemic to the internet information economy &mdash; she
 concludes the book by meditating on the similarities of open source software
 and online content more generally. Food for thought!</p></content><p><a href=https://www.georgeho.org/blog/open-source/>#open-source</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
