--- a/mass-matrix-benchmarks/index.html
+++ b/mass-matrix-benchmarks/index.html
@@ -99,4 +99,4 @@ more formally called the <em>metric</em>…&#160;<a href=#fnref:2 class=footnote
 time when I thought that I would have the patience to run each model and
 adaptation method multiple times.&#160;<a href=#fnref:3 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/open-source/>#open-source</a>
 <a href=https://www.georgeho.org/blog/pymc/>#pymc</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
