--- a/matrix-factorizations/index.html
+++ b/matrix-factorizations/index.html
@@ -107,4 +107,4 @@ machine learning.</p><blockquote class=embedly-card><h4><a href=https://speakerd
 learning</a>&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></div></content><p><a href=https://www.georgeho.org/blog/bayes/>#bayes</a>
 <a href=https://www.georgeho.org/blog/natural-language-processing/>#natural-language-processing</a>
 <a href=https://www.georgeho.org/blog/talks/>#talks</a></p></main><footer><form action=https://buttondown.email/api/emails/embed-subscribe/eigenfoo method=post target=popupwindow onsubmit='window.open("https://buttondown.email/eigenfoo","popupwindow")' class=embeddable-buttondown-form><label for=bd-email>Get my (monthly?) blog posts over email:</label><br><input type=email name=email id=bd-email placeholder=your@email.com>
-<input type=submit value=Subscribe></form><br>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+<input type=submit value=Subscribe></form><br></footer></body></html>
