--- a/work/index.html
+++ b/work/index.html
@@ -42,4 +42,4 @@ Show</a>.
 I also wrote <a href=https://www.georgeho.org/reddit-clusters/>a blog post on my
 results</a>, and <a href=https://www.georgeho.org/reddit-slides/>gave a talk on
 the data science that went into the
-project</a>.</li></ul></li></ul></content><p></p></main><footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a></footer></body></html>
+project</a>.</li></ul></li></ul></content><p></p></main><footer></footer></body></html>
